# pkgfile

./: .gitignore  .ycm_extra_conf.py  INSTALL  Makefile  Makefile.am  README  README.md  README.pod  TODO  autogen.sh  bash_completion  command-not-found.bash  configure.ac  macro.h  match.c  match.h  meson.build  meson_options.txt  nosr.c  nosr.h  pkgfile.c  pkgfile.h  pyproject.toml  repo.c  repo.h  result.c  result.h  update.c  update.h  util.c  util.h
build-aux/: ci-test  ci-test-asan  source-format  test-san
extra/: bash-completion  bash_completion  command-not-found.bash  command-not-found.fish  command-not-found.zsh  zsh-completion
m4/: attributes.m4
man/: pkgfile.pod  pkgfiled.pod
src/: archive_converter.cc  archive_converter.hh  archive_io.cc  archive_io.hh  archive_reader.cc  archive_reader.hh  buffer.c  buffer.h  cmddb.c  cmddb.h  compress.cc  compress.hh  db.cc  db.hh  db_builder.cc  db_builder.hh  db_format.hh  db_test.cc  filter.cc  filter.hh  filter_test.cc  macro.h  macro.hh  mapped_repo.cc  mapped_repo.hh  match.c  match.cc  match.h  match.hh  missing.h  pfdb_dump.cc  pkgfile.c  pkgfile.cc  pkgfile.h  pkgfile.hh  pkgfiled.cc  progress_display.cc  progress_display.hh  queue.hh  queue_test.cc  (+14 more)
systemd/: pkgfile-update.service  pkgfile-update.service.in  pkgfile-update.timer  pkgfiled.service.in
tests/: database.py  list.py  pkgfile_test.py  pkgfiled.py  search.py  update.py
tests/fakehttp/: server.py
tests/golden/alpm/x86_64/multilib/: multilib.files
tests/golden/alpm/x86_64/testing/: testing.files
tests/golden/pkgfile/: multilib.files  multilib.files.000  multilib.files.001  multilib.files.002  multilib.files.003  testing.files  testing.files.000  testing.files.001  testing.files.002
